--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
       <p class="fondo">
     <center>
     <meta charset="utf-8">
-    <title>Cifrado secreto</title>
+    <title>Cifrado secreto</le>
     <link rel="stylesheet" href="style.css" />
   </head>
   <h1> LETRAS SECRETAS</h1>
@@ -55,7 +55,7 @@ El <a href="https://es.wikipedia.org/wiki/Cifrado_C%C3%A9sar">Código Cesar</a>
     <input type="text" name="offset">
     <br>
     <br>
-    <button type="button" onclick="cifradito()" name="button_cifrar">Cifrar</button>
+    <button type="button" onclick="cifradito()" name="button_cifrar" value="Cifrar" id="boton2">Cifrar</button>
     <!-- <input type="button" name="boton_cifrar" value="Cifrar" id="boton2" onclick="cifradito()"> -->
     <button type="button" onclick="decifradito()" name="button_decifrar">Desifrar</button>
     <!-- <input type="button" name="boton_descifrar" value="Desifrar" id="boton3"> -->
