--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
       <p class="fondo">
     <center>
     <meta charset="utf-8">
-    <title>Cifrado secreto</le>
+    <title>Cifrado secreto</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <h1> LETRAS SECRETAS</h1>
