--- a/src/index.html
+++ b/src/index.html
@@ -5,19 +5,20 @@
     <link rel="stylesheet" href="style.css">
     <meta charset="utf-8">
     <title>Cifrado Secreto</title>
-    <p>Cifrado Secreto</p>
+    <p1>Cifrado Secreto</p1>
+    <br>
   </head>
   <body>
     <input type="text" id="texto" placeholder="texto a cifrar o decifrar">
-    <input type="number" id="offset" placeholder="numero">
+    <input type="number" id="offset" placeholder="desplazamiento">
     <br>
     <button id="cifrar" >CIFRAR</button>
-    <p id="texto_cifrado"></p>
     <button id="decifrar">DECIFRAR</button>
+    <p id="texto_cifrado"></p>
     <p id="texto_decifrado"></p>
 
     <script src="cipher.js"></script>
     <script src="index.js"></script>
-    
+
   </body>
 </html>
