--- a/src/index.html
+++ b/src/index.html
@@ -12,11 +12,10 @@
     <input type="text" id="texto" placeholder="texto a cifrar o decifrar">
     <input type="number" id="offset" placeholder="desplazamiento">
     <br>
-    <button id="cifrar" >CIFRAR</button>
-    <button id="decifrar">DECIFRAR</button>
+    <button id="cifrar" class="button_example" href="#">CIFRAR</button>
+    <button id="decifrar" class="button_example" href="#">DECIFRAR</button>
     <p id="texto_cifrado"></p>
     <p id="texto_decifrado"></p>
-
     <script src="cipher.js"></script>
     <script src="index.js"></script>
 
